# projet-banking-transactions-api

./: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
src/banking_api/: main.py  models.py
src/banking_api/services/: fraud_detection_service.py  stats_service.py
tests/: test_api.py
