[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banking_api"
version = "0.1.0"
description = "API de gestion de transactions bancaires"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "pytest",
    "pytest-cov",
    "flake8",
    "httpx"
]
